Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-6698

Mm must not ASSERT when running out of session space

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • None
    • NTCore
    • None

    Description

      section.c:1039

      /* Insert this view into system space and get a base address for it */
      Base = MiInsertInSystemSpace(Session, Buckets, ControlArea);
      ASSERT(Base);

      This assert will always be triggered, when we run out of system space. That can easily happen, when creating new desktops, etc. The fact that it happened because we were not freeing the desktop heaps doesn't mean it wouldn't happen when that is fixed, since those only get freed, when deleting the desktop, so any usermode app can create a number of desktops and then consuming up all sesion space.

      This assert has to go.

      Attachments

        Activity

          People

            alex_ionescu Alex Ionescu
            ThePhysicist Timo Kreuzer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: